--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dotenv": "^8.2.0",
     "follow-redirects": "^1.13.0",
     "nodemailer": "^6.4.11",
+    "twilio": "^3.49.0",
     "twitter-autohook": "^1.7.2"
   }
 }
