--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -11,7 +12,6 @@
   "dependencies": {
     "dotenv": "^8.2.0",
     "follow-redirects": "^1.13.0",
-    "nodemailer": "^6.4.11",
     "twilio": "^3.49.0",
     "twitter-autohook": "^1.7.2"
   }
