Created json directory for handleToNumber

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "cheerio": "^1.0.0-rc.3",
     "dotenv": "^8.2.0",
     "follow-redirects": "^1.13.0",
+    "jsonfile": "^6.0.1",
     "twilio": "^3.49.0",
     "twitter-autohook": "^1.7.2"
   }
